tests/script_errors/imut_bad_emit/error.txt
Error: 
    1 | #   Bad to the bone
    2 | match "dont-care" of
    3 |   case "dont-care" when emit "error" => "ouch"
      |                         ^^^^ Found the token `emit` but expected one of `!`, `\``, `$`, `(`, `+`, `-`, `<ident>`, `[`, `absent`, `args`, `bool`, `event`, `float`, `for`, `group`, `heredoc`, `int`, `match`, `merge`, `nil`, `not`, `patch`, `present`, `state`, `window`, `{`
    4 |   default => "ouch"
    5 | end
